# Hillel_HWp-06

./: CMakeLists.txt  Main.qml  app_icon.aps  app_icon.rc  main.cpp  resources.qrc  tcalccontroller.cpp  tcalccontroller.h  tcalcmodel.cpp  tcalcmodel.h  util.cpp  util.h
